--- a/index.html
+++ b/index.html
@@ -541,37 +541,63 @@ window.ScheduleHelper = function StaffScheduler() {
   const [showPdfMenu, setShowPdfMenu] = useState(false);
 
   // Call Claude API via Netlify function (API key stays server-side)
-  async function callClaudeAPI(body, retries) {
-    retries = retries || 0;
-    var maxRetries = 1;
-    var timeoutMs = 55000; // 55s — Netlify Pro allows 26s function timeout; give extra margin for network
-    var controller = new AbortController();
-    var timeoutId = setTimeout(function() { controller.abort(); }, timeoutMs);
-    try {
-      var res = await fetch('/.netlify/functions/claude-proxy', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(body),
-        signal: controller.signal
-      });
-      clearTimeout(timeoutId);
-      // If Netlify returned 502/504 (gateway timeout), retry once
-      if ((res.status === 502 || res.status === 504) && retries < maxRetries) {
-        addLog('warn', 'Got ' + res.status + ', retrying... (attempt ' + (retries + 2) + ')');
-        return callClaudeAPI(body, retries + 1);
-      }
-      return res;
-    } catch (err) {
-      clearTimeout(timeoutId);
-      if (err.name === 'AbortError') {
-        if (retries < maxRetries) {
-          addLog('warn', 'Request timed out after ' + (timeoutMs/1000) + 's, retrying... (attempt ' + (retries + 2) + ')');
-          return callClaudeAPI(body, retries + 1);
-        }
-        return { ok: false, status: 408, json: async () => ({ error: { message: 'Request timed out after retry. Try reducing batch complexity.' } }), text: async () => JSON.stringify({ error: { message: 'Request timed out' } }) };
-      }
-      throw err;
+  // ── API HELPERS ────────────────────────────────────────────────────────────
+  // callClaudeAPI: non-streaming, used by the AI chat agent for short requests.
+  async function callClaudeAPI(body) {
+    var res = await fetch('/.netlify/functions/claude-proxy', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(body)
+    });
+    return res;
+  }
+
+  // streamClaudeAPI: SSE streaming, used for schedule generation.
+  // !! DO NOT REPLACE WITH callClaudeAPI !! Streaming is required to prevent
+  // Netlify 504 timeouts — bytes flow from the first token so the infrastructure
+  // inactivity timeout never fires, regardless of how long generation takes.
+  // onProgress(charsReceived) called after each chunk for live UI feedback.
+  async function streamClaudeAPI(body, onProgress) {
+    var payload = Object.assign({}, body, { stream: true });
+    var response = await fetch('/.netlify/functions/claude-proxy', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(payload)
+    });
+
+    if (!response.ok) {
+      var errText = '';
+      try { errText = await response.text(); } catch(e) { errText = '?'; }
+      return { ok: false, status: response.status, errorText: errText };
     }
+
+    var reader = response.body.getReader();
+    var decoder = new TextDecoder();
+    var buffer = '';
+    var fullText = '';
+
+    while (true) {
+      var chunk = await reader.read();
+      if (chunk.done) break;
+      buffer += decoder.decode(chunk.value, { stream: true });
+      var lines = buffer.split('\n');
+      buffer = lines.pop();
+      for (var li = 0; li < lines.length; li++) {
+        var line = lines[li];
+        if (!line.startsWith('data: ')) continue;
+        var raw = line.slice(6).trim();
+        if (!raw || raw === '[DONE]') continue;
+        try {
+          var evt = JSON.parse(raw);
+          if (evt.type === 'content_block_delta' && evt.delta && evt.delta.type === 'text_delta') {
+            fullText += evt.delta.text;
+            if (onProgress) onProgress(fullText.length);
+          }
+        } catch(e) {}
+      }
+    }
+
+    return { ok: true, status: 200, text: fullText };
   }
 
   const logsEndRef = useRef(null);
@@ -1318,24 +1344,26 @@ window.ScheduleHelper = function StaffScheduler() {
     if (staff.length === 0 || locations.length === 0) { alert('Please add staff members and locations first.'); return; }
     setGenerating(true);
     setGenAmbiguities(null);
-    addLog('info', 'Starting AI schedule generation (3-day batches, system/user prompt split)...');
+    addLog('info', 'Starting AI schedule generation (weekly batches W1-W4, streaming, full carry-forward)...');
 
     const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
     const rulesSummary = buildRulesSummary();
     const prevMonthContext = getPreviousMonthContext();
 
-    // Collect all weekdays, then split into weekly batches (W1=days 1-7, W2=8-14, W3=15-21, W4=22+)
+    // Weekly batches: W1=days 1-7, W2=8-14, W3=15-21, W4=22+
+    // Each batch covers a natural calendar week (up to 5 weekdays).
+    // Streaming eliminates timeout risk regardless of batch size.
+    // !! DO NOT change back to 3-day batches — weekly batches give better accuracy
+    // for monthly negative constraints and cross-week conditional rules. !!
     const allWeekdays = [];
     for (let d = 1; d <= daysInMonth; d++) {
       const dow = new Date(currentYear, currentMonth, d).getDay();
       if (dow >= 1 && dow <= 5) allWeekdays.push(d);
     }
-    // 3-day batches — smaller output keeps each API call well within timeout limits
-    const batches = [];
-    for (let i = 0; i < allWeekdays.length; i += 3) {
-      const chunk = allWeekdays.slice(i, i + 4);
-      batches.push({ days: chunk, label: 'Days ' + chunk[0] + '-' + chunk[chunk.length - 1] });
-    }
+    const weekBounds = [[1,7],[8,14],[15,21],[22,daysInMonth]];
+    const batches = weekBounds.map(function(wb, wi) {
+      return { days: allWeekdays.filter(function(d) { return d >= wb[0] && d <= wb[1]; }), label: 'W' + (wi+1) };
+    }).filter(function(b) { return b.days.length > 0; });
 
     const decisionsBlock = userDecisions ? (
       '\nUSER DECISIONS (from critical ambiguity prompts):\n' +
@@ -1389,7 +1417,6 @@ window.ScheduleHelper = function StaffScheduler() {
 
     const allAssignments = {};
     const allAmbiguities = [];
-    const allAutoResolved = [];
     let totalDays = 0;
 
     for (let bi = 0; bi < batches.length; bi++) {
@@ -1403,26 +1430,27 @@ window.ScheduleHelper = function StaffScheduler() {
         return `${dateKey(currentYear, currentMonth, d)} (${DAYS_OF_WEEK[dt.getDay()]}, W${wk})`;
       }).join(', ');
 
-      // Carry forward the last 5 assigned days for cross-week dependency accuracy
+      // Full carry-forward — ALL days scheduled so far, in compact ID format.
+      // !! DO NOT revert to last-5-days slice — monthly constraints like "no more than
+      // 2 Stockton Thursdays" require the full history to count correctly. !!
+      // !! DO NOT revert to full name format — IDs are 76% smaller and Claude knows
+      // all ID→name mappings from the system prompt already. !!
       let priorWeeksBlock = '';
       if (bi > 0 && Object.keys(allAssignments).length > 0) {
-        priorWeeksBlock = 'PRIOR WEEKS ALREADY SCHEDULED (for cross-day dependencies):\n';
-        const priorDays = Object.keys(allAssignments).sort().slice(-5);
-        priorDays.forEach(function(dk) {
+        priorWeeksBlock = 'ALL DAYS SCHEDULED SO FAR (compact: staffId=AM-locId/PM-locId):\n';
+        const allPriorDays = Object.keys(allAssignments).sort();
+        allPriorDays.forEach(function(dk) {
           const dayData = allAssignments[dk];
           const d = parseInt(dk.split('-')[2]);
           const dow = new Date(currentYear, currentMonth, d).getDay();
-          priorWeeksBlock += '  ' + dk + ' (' + DAYS_OF_WEEK[dow] + '):\n';
-          Object.entries(dayData).forEach(function(entry) {
-            const sid = entry[0]; const periods = entry[1];
-            const s = staff.find(function(x) { return x.id === sid; });
-            if (!s) return;
-            const amLoc = periods.am === 'OFF' ? 'OFF' : (locations.find(function(l) { return l.id === periods.am; })?.name || periods.am);
-            const pmLoc = periods.pm === 'OFF' ? 'OFF' : (locations.find(function(l) { return l.id === periods.pm; })?.name || periods.pm);
-            priorWeeksBlock += '    ' + s.name + ': ' + (amLoc === pmLoc ? amLoc : 'AM=' + amLoc + ', PM=' + pmLoc) + '\n';
-          });
+          const entries = Object.entries(dayData).map(function(e) {
+            const sid = e[0]; const p = e[1];
+            return sid + '=' + (p.am||'OFF') + '/' + (p.pm||'OFF');
+          }).join(' ');
+          priorWeeksBlock += '  ' + dk + '(' + DAYS_OF_WEEK[dow] + '): ' + entries + '\n';
         });
-        priorWeeksBlock += 'Use this to inform conditional rules that depend on prior days.\n\n';
+        priorWeeksBlock += 'Use this to: (1) count monthly constraint occurrences, ' +
+          '(2) resolve conditional/cross-week rules, (3) track rotation state.\n\n';
       }
 
       // ── USER MESSAGE: only batch-specific content (prior context + task) ──
@@ -1436,48 +1464,39 @@ window.ScheduleHelper = function StaffScheduler() {
         '    }\n' +
         '  },\n' +
         '  "ambiguities": [\n' +
-        '    { "id": "unique_id", "severity": "critical|minor", "question": "description of ambiguity", "chose": "what you chose and why", "alternatives": ["option A", "option B"] }\n' +
-        '  ],\n' +
-        '  "auto_resolved": [\n' +
-        '    { "description": "what minor conflict was auto-resolved and how" }\n' +
+        '    { "id": "unique_id", "severity": "critical|minor", "question": "≤12 words" }\n' +
         '  ]\n' +
+        '  // !! NO auto_resolved field — omit entirely to save tokens !!\n' +
         '}\n' +
         'Use exact IDs. Include every listed day and every staff member.\n' +
-        'For CRITICAL ambiguities (e.g., rotation with no previous month data, contradictory required rules): list them.\n' +
-        'For MINOR ambiguities: auto-resolve and list in auto_resolved.';
+        'For CRITICAL ambiguities only (rotation with no prior data, contradictory required rules): list them briefly.\n' +
+        'For MINOR ambiguities: auto-resolve silently. Do NOT output auto_resolved.';
 
       addLog('request', `Batch ${bi+1} (${batchLabel}): ${batchDays.length} days | user msg: ${batchPrompt.length} chars`);
 
       try {
-        const response = await callClaudeAPI({
+        // !! USE streamClaudeAPI NOT callClaudeAPI here !!
+        // Streaming keeps bytes flowing so Netlify's infrastructure inactivity
+        // timeout never fires — this is the fix for 504 errors on schedule generation.
+        const result = await streamClaudeAPI({
           model: "claude-sonnet-4-6",
-          max_tokens: 3000,
+          max_tokens: 4096,
           system: systemPrompt,
           messages: [{ role: "user", content: batchPrompt }]
+        }, function(charsReceived) {
+          setAiLog('⏳ Generating ' + batchLabel + '... (' + charsReceived + ' chars received)');
         });
 
-        addLog('response', `Batch ${bi+1}: HTTP ${response.status}`, { ok: response.ok });
+        addLog('response', `Batch ${bi+1}: HTTP ${result.status}`, { ok: result.ok });
 
-        if (!response.ok) {
-          let errorText = '';
-          try { errorText = await response.text(); } catch(e) { errorText = '?'; }
-          addLog('error', `Batch ${bi+1} error ${response.status}`, { errorText: errorText.substring(0, 500) });
-          setAiLog(`⚠️ API error on ${batchLabel} (${response.status}). Check developer logs.`);
+        if (!result.ok) {
+          addLog('error', `Batch ${bi+1} error ${result.status}`, { errorText: (result.errorText||'').substring(0, 500) });
+          setAiLog(`⚠️ API error on ${batchLabel} (${result.status}). Check developer logs.`);
           setGenerating(false);
           return;
         }
 
-        const rawText = await response.text();
-        const data = JSON.parse(rawText);
-
-        if (data.error) {
-          addLog('error', `Batch ${bi+1} API error`, { error: data.error });
-          setAiLog(`⚠️ Error on ${batchLabel}: ${data.error?.message || 'Unknown'}`);
-          setGenerating(false);
-          return;
-        }
-
-        const text = (data.content || []).map(i => i.type === 'text' ? (i.text || '') : '').join('');
+        const text = result.text;
         const clean = text.replace(/```json\s*/g, '').replace(/```\s*/g, '').trim();
 
         let parsed;
@@ -1493,9 +1512,8 @@ window.ScheduleHelper = function StaffScheduler() {
         Object.assign(allAssignments, dayData);
         totalDays += Object.keys(dayData).length;
 
-        // Collect ambiguities and auto-resolved
+        // Collect ambiguities (auto_resolved intentionally omitted — saves tokens, no benefit)
         if (parsed.ambiguities) allAmbiguities.push(...parsed.ambiguities);
-        if (parsed.auto_resolved) allAutoResolved.push(...parsed.auto_resolved);
 
         addLog('success', `Batch ${bi+1} (${batchLabel}): ${Object.keys(dayData).length} days${parsed.ambiguities?.length ? ', ' + parsed.ambiguities.length + ' ambiguities' : ''}`);
 
@@ -1534,7 +1552,7 @@ window.ScheduleHelper = function StaffScheduler() {
     const criticals = allAmbiguities.filter(a => a.severity === 'critical');
     if (criticals.length > 0 && !userDecisions) {
       setGenAmbiguities(criticals);
-      setGenPendingContext({ allAssignments, allAmbiguities, allAutoResolved, totalDays, holidayEdits });
+      setGenPendingContext({ allAssignments, allAmbiguities, totalDays, holidayEdits });
       setAiLog(`⚠️ ${criticals.length} critical ambiguit${criticals.length > 1 ? 'ies' : 'y'} need${criticals.length === 1 ? 's' : ''} your input. Resolve below to finalize.`);
       setGenerating(false);
       return;
@@ -1545,14 +1563,12 @@ window.ScheduleHelper = function StaffScheduler() {
     if (conflicts.length > 0) {
       setConflictsReport({ conflicts, month: currentMonth, year: currentYear });
       addLog('info', `Found ${conflicts.length} potential rule conflicts`);
-      setAiLog(`⚠️ Schedule generated with ${conflicts.length} conflict${conflicts.length>1?'s':''}. Review below.${allAutoResolved.length > 0 ? ` ${allAutoResolved.length} minor issue${allAutoResolved.length>1?'s':''} auto-resolved.` : ''}${holidayEdits > 0 ? ` ${holidayEdits} holiday corrections.` : ''}`);
+      setAiLog(`⚠️ Schedule generated with ${conflicts.length} conflict${conflicts.length>1?'s':''} needing review.${holidayEdits > 0 ? \` ${holidayEdits} holiday corrections.\` : ''}`);
     } else {
       setConflictsReport(null);
-      setAiLog(`✅ Schedule generated for ${MONTHS[currentMonth]} ${currentYear}! ${totalDays} days populated — no rule conflicts detected.${allAutoResolved.length > 0 ? ` ${allAutoResolved.length} minor issue${allAutoResolved.length>1?'s':''} auto-resolved.` : ''}${holidayEdits > 0 ? ` ${holidayEdits} holiday corrections.` : ''}`);
+      setAiLog(`⚠️ Schedule generated with ${conflicts.length} conflict${conflicts.length>1?'s':''} needing review.${holidayEdits > 0 ? \` ${holidayEdits} holiday corrections.\` : ''}`);
     }
-    if (allAutoResolved.length > 0) {
-      allAutoResolved.forEach(ar => addLog('info', `Auto-resolved: ${ar.description}`));
-    }
+
     setGenerating(false);
   }
 
