--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ function WeekOfMonthPicker({ value, onChange }) {
   return (
     <div style={{marginBottom:16}}>
       <label style={{display:'block',fontSize:13,color:'#9ca3af',marginBottom:8,fontFamily:'"DM Sans",sans-serif',textTransform:'uppercase',letterSpacing:'0.05em'}}>Week of Month</label>
-      <div style={{display:'flex',gap:isMobile?6:8,flexWrap:'wrap'}}>
+      <div style={{display:'flex',gap:6,flexWrap:'wrap'}}>
         <div onClick={toggleAll}
           style={{padding:'8px 16px',borderRadius:8,cursor:'pointer',fontSize:14,fontWeight:600,fontFamily:'"DM Sans",sans-serif',
             background:isAll?'#6366f122':'#12121f',color:isAll?'#818cf8':'#6b7280',border:`1px solid ${isAll?'#6366f1':'#2a2a4a'}`,transition:'all 0.15s'}}>
